--- a/digital-wave-games/src/app/components/signup/signup.component.html
+++ b/digital-wave-games/src/app/components/signup/signup.component.html
@@ -3,8 +3,8 @@
     <h2>Cadastrar</h2>
     <mat-card>
 
-      <mat-stepper #stepper>
-        <mat-step [stepControl]="accountFormGroup" errorMessage="Incompleto">
+      <!-- <mat-stepper #stepper> -->
+        <!-- <mat-step [stepControl]="accountFormGroup" errorMessage="Incompleto"> -->
 
           <form [formGroup]="accountFormGroup">
             <ng-template matStepLabel>Dados da Conta</ng-template>
@@ -21,16 +21,10 @@
             </mat-form-field>
 
             <mat-form-field class="full-width-input" appearance="fill">
-              <mat-label>Nome de usuário</mat-label>
+              <mat-label>Nome</mat-label>
               <input matInput formControlName="usernameCtrl" required autocomplete="off">
               <mat-error *ngIf="accountFormGroup.get('usernameCtrl').hasError('required')">
-                O nome de usuário é obrigatório
-              </mat-error>
-              <mat-error *ngIf="accountFormGroup.get('usernameCtrl').hasError('pattern')">
-                O nome de usuário só pode conter letras e números
-              </mat-error>
-              <mat-error *ngIf="accountFormGroup.get('usernameCtrl').hasError('minlength')">
-                O nome de usuário deve ter pelo menos 5 caracteres
+                Nome é obrigatório
               </mat-error>
               <mat-error *ngIf="accountFormGroup.get('usernameCtrl').hasError('maxlength')">
                 O nome de usuário deve ter no máximo 30 caracteres
@@ -46,9 +40,6 @@
               <mat-error *ngIf="accountFormGroup.get('passwordCtrl').hasError('minlength')">
                 A senha deve ter pelo menos 8 caracteres
               </mat-error>
-              <mat-error *ngIf="accountFormGroup.get('passwordCtrl').hasError('strength')">
-                Requisitos: (1) 8 caracteres; (2) uma maiúscula; (3) uma minúscula, (4) um número
-              </mat-error>
             </mat-form-field>
 
             <mat-form-field class="full-width-input" appearance="fill">
@@ -63,106 +54,15 @@
             </mat-form-field>
 
             <div class="navigator">
-              <button mat-flat-button matStepperNext>Próximo</button>
+              <button mat-flat-button (click)="confirmSignup()">Finalizar</button>
             </div>
           </form>
 
-        </mat-step>
-        <mat-step [stepControl]="personalFormGroup" optional>
-          <form [formGroup]="personalFormGroup">
-            <ng-template matStepLabel>Dados Pessoais</ng-template>
-            <h3>Informações de endereço</h3>
-
-            <mat-grid-list cols="3" rowHeight="2:1" [gutterSize]="'10px'">
-              <mat-grid-tile>
-                <mat-form-field class="small-input" appearance="fill">
-                  <mat-label>CEP</mat-label>
-                  <input matInput formControlName="postalCodeCtrl" autocomplete="off">
-                </mat-form-field>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="2">
-                <mat-form-field class="medium-input" appearance="fill">
-                  <mat-label>Cidade</mat-label>
-                  <input matInput formControlName="cityCtrl" autocomplete="off">
-                </mat-form-field>
-              </mat-grid-tile>
-            </mat-grid-list>
-
-            <mat-grid-list cols="3" rowHeight="2:1" [gutterSize]="'10px'">
-              <mat-grid-tile>
-                <mat-form-field class="small-input" appearance="fill">
-                  <mat-label>UF</mat-label>
-                  <input matInput formControlName="stateCtrl" autocomplete="off">
-                </mat-form-field>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="2">
-                <mat-form-field class="medium-input" appearance="fill">
-                  <mat-label>Bairro</mat-label>
-                  <input matInput formControlName="districtCtrl" autocomplete="off">
-                </mat-form-field>
-              </mat-grid-tile>
-            </mat-grid-list>
-
-            <mat-form-field class="full-width-input" appearance="fill">
-              <mat-label>Rua</mat-label>
-              <input matInput formControlName="streetCtrl" autocomplete="off">
-            </mat-form-field>
-
-            <mat-grid-list cols="3" rowHeight="2:1" [gutterSize]="'10px'">
-              <mat-grid-tile>
-                <mat-form-field class="small-input" appearance="fill">
-                  <mat-label>Número</mat-label>
-                  <input matInput formControlName="numberCtrl" autocomplete="off">
-                </mat-form-field>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="2">
-                <mat-form-field class="medium-input" appearance="fill">
-                  <mat-label>Complemento</mat-label>
-                  <input matInput formControlName="additionalInfoCtrl" autocomplete="off">
-                </mat-form-field>
-              </mat-grid-tile>
-            </mat-grid-list>
-
-            <h3>Informações de contato</h3>
-            <mat-grid-list cols="3" rowHeight="2:1" [gutterSize]="'10px'">
-              <mat-grid-tile>
-                <mat-form-field class="small-input" appearance="fill">
-                  <mat-label>Telefone fixo</mat-label>
-                    <input matInput formControlName="phone1Ctrl" autocomplete="off">
-                  </mat-form-field>
-                </mat-grid-tile>
-                <mat-grid-tile>
-                  <mat-form-field class="small-input" appearance="fill">
-                    <mat-label>Celular 1</mat-label>
-                    <input matInput formControlName="phone2Ctrl" autocomplete="off">
-                  </mat-form-field>
-                </mat-grid-tile>
-                <mat-grid-tile>
-                  <mat-form-field class="small-input" appearance="fill">
-                    <mat-label>Celular 2</mat-label>
-                    <input matInput formControlName="phone3Ctrl" autocomplete="off">
-                  </mat-form-field>
-                </mat-grid-tile>
-              </mat-grid-list>
-
-              <mat-form-field class="full-width-input" appearance="fill">
-                <mat-label>Email para contato</mat-label>
-                <input matInput formControlName="secondaryEmailCtrl" autocomplete="off">
-                <mat-error *ngIf="personalFormGroup.get('secondaryEmailCtrl').hasError('email') && !personalFormGroup.get('secondaryEmailCtrl').hasError('required')">
-                  Informe um email válido
-                </mat-error>
-              </mat-form-field>
-
-            <div class="navigator">
-              <button mat-button matStepperPrevious>Voltar</button>
-              <button mat-flat-button matStepperNext>Próximo</button>
-            </div>
-          </form>
-        </mat-step>
-        <mat-step>
+        <!-- </mat-step> -->
+        <!-- <mat-step>
           <ng-template matStepLabel>Confirmação</ng-template>
           <div class="confirmation-wrapper">
-            <button class="code-button" [disabled]="sentCode || !hasEmail()" (click)="sendCode()" mat-flat-button matStepperNext>Enviar código</button>
+            <button class="code-button" [disabled]="sentCode || !hasEmail()" mat-flat-button matStepperNext>Enviar código</button>
             <form [formGroup]="confirmationFormGroup">
               <mat-form-field class="medium-input" appearance="fill">
                 <mat-label>Código de confirmação</mat-label>
@@ -176,9 +76,7 @@
             <button mat-flat-button [disabled]="!isFormValid()" (click)="confirmSignup()">Confirmar</button>
           </div>
         </mat-step>
-      </mat-stepper>
-
-
+      </mat-stepper> -->
     </mat-card>
   </div>
 </div>
