Changed Product Register and Update

--- a/digital-wave-games/src/app/components/my-account/my-account.component.html
+++ b/digital-wave-games/src/app/components/my-account/my-account.component.html
@@ -10,9 +10,9 @@
       <div class="avaliation" *ngFor="let order of orders; let i = index">
         <!-- <div class="avaliation"> -->
        <div class="package-img-container">
-        <div class="container-img">
+       <!--- <div class="container-img">
           <img class="img-game" src="{{ order.orderItems[0].imgUrl }}">
-        </div>
+        </div>-->
        </div>
         <div class="avaliation-info">
           <div class="name-rate">
